--- a/backend/package.json
+++ b/backend/package.json
@@ -42,12 +42,15 @@
     "cloudinary": "^2.5.1",
     "compression": "^1.8.0",
     "express-session": "^1.18.1",
+    "googleapis": "^144.0.0",
     "helmet": "^8.0.0",
     "moment-timezone": "^0.5.47",
     "mysql2": "^3.12.0",
+    "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "passport-oauth2": "^1.8.0",
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -65,6 +68,7 @@
     "@types/lodash": "^4.17.15",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.17.19",
+    "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.0",
