--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@keyv/redis": "^4.2.0",
+    "@nestjs/bull": "^11.0.2",
     "@nestjs/bullmq": "^11.0.2",
     "@nestjs/cache-manager": "^3.0.0",
     "@nestjs/common": "^10.0.0",
@@ -35,8 +37,11 @@
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^5.1.1",
+    "bull": "^4.16.5",
     "bullmq": "^5.41.2",
     "cache-manager": "^6.4.0",
+    "cache-manager-redis-yet": "^5.1.5",
+    "cacheable": "^1.8.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^2.5.1",
@@ -44,6 +49,7 @@
     "express-session": "^1.18.1",
     "googleapis": "^144.0.0",
     "helmet": "^8.0.0",
+    "ioredis": "^5.5.0",
     "moment-timezone": "^0.5.47",
     "mysql2": "^3.12.0",
     "nodemailer": "^6.10.0",
