--- a/backend/package.json
+++ b/backend/package.json
@@ -52,15 +52,18 @@
     "ioredis": "^5.5.0",
     "moment-timezone": "^0.5.47",
     "mysql2": "^3.12.0",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.8.0",
     "pg": "^8.13.3",
+    "qs": "^6.14.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "slugify": "^1.6.6",
+    "stripe": "^17.7.0",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
